@@ -1,3 +1,7 @@
+Thu Mar  5 18:06:49 HKT 2020
+	* check_file_func(): do NOT check DECL_SAVED_TREE, do NOT use
+			     FUNC_IS_NONE.
+
 Sat Dec 14 17:57:39 CST 2019
 	* fix SIGSEGV issue by loading target sibuf automatically. Use the
 	latest clib.
